--- a/karriar/index.html
+++ b/karriar/index.html
@@ -159,83 +159,8 @@
 	    <div class="stripe s4"></div>
 	</div>
 	<section class="Stripe-Image-Hero Hero">
-		<div class="Hero__message">
-			<div class="Hero__title">
-				<h1 class="Helm__text--slate1 common-IntroText">Hjälp oss höja Sveriges byggkvalité</h1>
-			</div>
-			<div class="Hero__text">
-				<p class="jobs-IntroText Helm__text--slate1">
-					Besiktningsman.se är Sveriges ledande entreprenadbesiktningsföretag för nyproduktion av bostäder och kommersiella byggnader.
-					<br>
-					Vi växer och söker dig som vill vara med att säkerställa säkrare boenden för Sverige.
-				</p>
-			</div>
-			<div class="Hero__cta">
-				<a data-analytics-source="jobs_openings_cta" data-analytics-action="see_open_roles" href="https://stripe.com/jobs/search" class="common-Button Helm-Button common-Button common-Button--default Helm__background--slate1">See open roles</a>
-			</div>
-		</div>
-		<div class="Stripe-Image-Hero__images js-hero-stripes">
-			<!-- header image left -->
-			<div class="StripeImage__wrapper">
-				<div class="StripeImage js-stripe-image">
-					<svg class="StripeImage__main">
-						<mask id="image-maskhttps://b.stripecdn.com/site-srv/assets/img/v3/jobs_v2/hero/balcony-72f7b2a23c9ddfe5e1969430dbc3ff75f3580df3.jpg" class="StripeImage__mask">
-							<rect width="100%" height="191.35626622677023" rx="8" ry="8" y="74.39373377322977" style="fill: #fff" transform="skewY(-12)"></rect>
-						</mask>
-						<rect width="100%" height="100%" rx="8" ry="8" y="0" style="fill: #fff" class="StripeImage__background" mask="url(#image-maskhttps://b.stripecdn.com/site-srv/assets/img/v3/jobs_v2/hero/balcony-72f7b2a23c9ddfe5e1969430dbc3ff75f3580df3.jpg)"></rect>
-						<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href="../assets/img/backgrounds/inspectorFloor.JPG" mask="url(#image-maskhttps://b.stripecdn.com/site-srv/assets/img/v3/jobs_v2/hero/balcony-72f7b2a23c9ddfe5e1969430dbc3ff75f3580df3.jpg)"></image>
-					</svg>
-					<div class="StripeImage__stripes"></div>
-					<div class="StripeImage__hitArea">
-						<div class="StripeImage__tooltipTarget" style="left: 50%; top: 40%;"></div>
-					</div>
-				</div>
-			</div>
-			<div class="StripeImage__wrapper">
-				<div class="StripeImage js-stripe-image">
-					<svg class="StripeImage__main">
-						<mask id="image-maskhttps://b.stripecdn.com/site-srv/assets/img/v3/jobs_v2/life_at_stripe/critique-12487adc86daced182f3a0e319a88dec45aea300.jpg" class="StripeImage__mask">
-							<rect width="100%" height="326.2486894571378" rx="8" ry="8" y="123.2823105428622" style="fill: #fff" transform="skewY(-12)"></rect>
-						</mask>
-						<rect width="100%" height="100%" rx="8" ry="8" y="0" style="fill: #fff" class="StripeImage__background" mask="url(#image-maskhttps://b.stripecdn.com/site-srv/assets/img/v3/jobs_v2/life_at_stripe/critique-12487adc86daced182f3a0e319a88dec45aea300.jpg)"></rect>
-						<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href="../assets/img/backgrounds/bm_front.jpg" mask="url(#image-maskhttps://b.stripecdn.com/site-srv/assets/img/v3/jobs_v2/life_at_stripe/critique-12487adc86daced182f3a0e319a88dec45aea300.jpg)">
-						</image>
-					</svg>
-					<div class="StripeImage__stripes"></div>
-					<div class="StripeImage__hitArea">
-						<div class="StripeImage__tooltipTarget" style="left: 50%; top: 40%;"></div>
-					</div>
-				</div>
-			</div>
-			<!-- header image right -->
-			<div class="StripeImage__wrapper">
-				<div class="StripeImage js-stripe-image">
-					<svg class="StripeImage__main">
-						<mask id="image-mask/img/v3/jobs_v2/hero/people-meeting.jpg" class="StripeImage__mask">
-							<rect width="100%" height="191.35626622677023" rx="8" ry="8" y="74.39373377322977" style="fill: #fff" transform="skewY(-12)"></rect>
-						</mask>
-						<rect width="100%" height="100%" rx="8" ry="8" y="0" style="fill: #fff" class="StripeImage__background" mask="url(#image-mask/img/v3/jobs_v2/hero/people-meeting.jpg)"></rect>
-						<image width="100%" height="100%" preserveAspectRatio="xMidYMid slice" xlink:href="../assets/img/backgrounds/bm_two.jpg" mask="url(#image-mask/img/v3/jobs_v2/hero/people-meeting.jpg)">
-						</image>
-					</svg>
-					<div class="StripeImage__stripes"></div>
-					<div class="StripeImage__hitArea">
-						<div class="StripeImage__tooltipTarget" style="left: 50%; top: 40%;"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- header image center -->
-		<div class="TransformingVideo">
-			<div class="TransformingVideo__widthConstraint">
-				<div class="TransformingVideo__container js-video-wrapper TransformingVideo__container--skewed TransformingVideo__container--initialized" style="--scale:0.494847; --skew:-12deg; --border-radius:16.1666; --offset:108.266;">
-					<img src="../assets/img/backgrounds/bm_goran.jpg" alt="">
-				</div>
-			</div>
-		</div>
-
+		<h1 class="common-UppercaseText Absolute-Center">Sveriges ledande entreprenadbesiktningsföretag expanderar</h1>
 	</section>
-
 	<section class="Cat">
 		<div class="container-lg">
 			<div class="Helm-SectionIntro">
@@ -254,7 +179,7 @@
 				<div class="Helm-SectionIntro__text">
 					<p class="jobs-IntroText Helm__text--slate3">
 						Vi erbjuder chansen att göra karriär inom ett snabbt växande företag som ligger på fronten av innovation inom besiktningsbranschen.
-						Arbetet du gör hos oss är avgörande för att säkerställa säkra och välbyggda hem runtom i Sverige.
+						Arbetet du gör hos oss är avgörande för att säkerställa välbyggda projekt runtom i Sverige.
 					</p>
 				</div>
 			</div>
@@ -264,11 +189,11 @@
 
 				<div class="Helm-LayoutColumns Helm-LayoutColumns--gapMedium Jobs-LayoutColumns Helm-LayoutColumns--2col">
 					<div class="Helm-LayoutColumns__column">
-							<h1>Träning och mentorskap</h1>
-							<p class="common-BodyText">
-								Via vår besiktningsutbildningstjänst 'Besiktningsutbildarna.se' så får du tillgång till branschledande mentorer
-								och det senaste inom allt gällande bygg så att du kan ta din karriär till nästa nivå.
-							</p>
+						<h1>Träning och mentorskap</h1>
+						<p class="common-BodyText">
+							Via vår besiktningsutbildningstjänst 'Besiktningsutbildarna.se' så får du tillgång till branschledande mentorer
+							och det senaste inom allt gällande bygg så att du kan ta din karriär till nästa nivå.
+						</p>
 					</div>
 					<div class="Helm-LayoutColumns__column">
 						<div class="QuoteCard MediaElement">
