Folder structure linking fix for web

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<!-- favicons -->
-	<link rel="shortcut icon" href="../../../favicon.ico">
+	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description" content="Välkommen till din personliga avropssida. Slipp administrationsarbetet. Boka din besiktning med ett klick!" />
 	<meta name="robots" content="noodp" />
@@ -18,14 +18,14 @@
 	<meta property="og:description" content="Slipp administrationsarbetet. Boka din besiktning med ett klick!" />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
-	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
+	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title" content="Välkommen till din personliga avropssida" />
 	<meta name="twitter:description" content="Slipp administrationsarbetet. Boka din besiktning med ett klick!" />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<!-- Styles -->
-	<link href="../../../css/slides.css" rel="stylesheet" type="text/css">
+	<link href="../css/slides.css" rel="stylesheet" type="text/css">
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -194,7 +194,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../../assets/img/backgrounds/skanskaproject.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/skanskaproject.jpg)" alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
 	<!-- Slide #24 -->
 
@@ -228,25 +228,25 @@
 					<h2 class="common-IntroText margin-top-1 margin-bottom-5">Hur blir det enklare?</h2>
 					<ul class="flex margin-bottom-5">
 						<li class="col-3-12">
-							<img src="../../../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor"
+							<img src="../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor"
 								style="width:80px;">
 							<h3 class="equalElement common-BodyTitle">Insikt</h3>
 							<p class="common-BodyText">Inga förfrågningsunderlag</p>
 						</li>
 						<li class="col-3-12">
-							<img src="../../../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor"
+							<img src="../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor"
 								style="width:80px;">
 							<h3 class="equalElement common-BodyTitle">Spara tid</h3>
 							<p class="common-BodyText">Inga offerter</p>
 						</li>
 						<li class="col-3-12">
-							<img src="../../../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
+							<img src="../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
 								style="width:110px;">
 							<h3 class="equalElement common-BodyTitle">TITLE</h3>
 							<p class="common-BodyText">Inga uppdragsbekräftelser</p>
 						</li>
 						<li class="col-3-12">
-							<img src="../../../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
+							<img src="../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
 								style="width:110px;">
 							<h3 class="equalElement common-BodyTitle">TITLE</h3>
 							<p class="common-BodyText">Inga beställningsskrivelser</p>
@@ -281,17 +281,17 @@
 		<div class="content">
 			<div class="container-lg">
 				<div class="wrap">
-					<img class="margin-top-1" src="../../assets/svg/questions_icon.svg" alt="" style="width: 100%;max-width: 125px;">
+					<img class="margin-top-1" src="../assets/svg/questions_icon.svg" alt="" style="width: 100%;max-width: 125px;">
 					<h3 class="common-IntroText2">
 						Har du frågor och funderingar?
 					</h3>
 					<p class="common-BodyTitle"> Då kan du boka in ett möte med en av våra säljare genom att hitta en ledig tid i kalendern nedan.</p>
 					<ul class="grid grid-74 later equal left">
 						<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
-							<img src="../../assets/img/backgrounds/contactYones.png" alt="" height="400" width="600">
+							<img src="../assets/img/backgrounds/contactYones.png" alt="" height="400" width="600">
 						</li>
 						<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
-							<img src="../../assets/img/backgrounds/contactKenneth.png" alt="" height="400" width="600">
+							<img src="../assets/img/backgrounds/contactKenneth.png" alt="" height="400" width="600">
 						</li>
 					</ul>
 				</div>
