--- a/skanska/index.html
+++ b/skanska/index.html
@@ -182,12 +182,12 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<img src="../assets/img/logos/skanska_white.svg" alt="SKANSKA" style="max-width: 320px; width: 100%;color: #fff;" class="margin-bottom-2"/>
 						<h1 class="common-IntroText text-white">
-							Välkommen till din personliga avropssida
+							Välkommen till er personliga avropssida
 						</h1>
 						<p>
-							Slipp administrationsarbete. Boka din besiktning med ett klick!
+							Slipp administrationsarbete. Boka in en besiktning med ett klick!
 						</p>
-						<a class="typeform-share common-Button text-blue" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">Kontakta mig </a>
+						<a class="typeform-share common-Button text-blue" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">boka besiktning </a>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 					</div>
 
@@ -205,14 +205,14 @@
 
 					<div class="fix-10-12 center margin-bottom-10 margin-top-1">
 						<h2 class="common-IntroText2">
-							Tack vare det nationella ramavtalet om entreprenadbesiktningar och kontrollansvariguppdrag slipper du som projektutvecklare hos Skanska huvudvärken med att samla in massa underlag för att boka in en besiktning. 
+							Tack vare det nationella ramavtalet om entreprenadbesiktningar och kontrollansvariguppdrag slipper ni som projektutvecklare hos Skanska huvudvärken med att samla in massa underlag för att boka in en besiktning. 
 						</h2>
 						<div class="announcement">
 							<span class="new-pill">PS</span>
-							<span class="message">
-								Ramavtalet kan du hitta i Skanskas intranät genom att söka på “besiktning”/”besiktningsman”. 
+							<span class="message left">
+								Ramavtalet kan ni hitta i Skanskas intranät genom att söka på “besiktning”/”besiktningsman”. 
 								<br>
-								I ramavtalet finner du info om exempelvis priser och villkor som exklusivt gäller för Skanska.
+								I ramavtalet finns information om exempelvis priser och villkor som exklusivt gäller för Skanska.
 							</span>
 						</div>
 					</div>
@@ -252,10 +252,10 @@
 							<p class="common-BodyText">Inga beställningsskrivelser</p>
 						</li>
 					</ul>
-					<p class="common-BodyTitle">Det enda du behöver göra att fylla i ett enkelt avrop!</p>
+					<p class="common-BodyTitle">Det enda ni behöver göra att fylla i ett enkelt avrop!</p>
 					<a class="typeform-share common-Button blue text-white margin-bottom-10"
 						href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left"
-						target="_blank">Fyll i ditt avrop här</a>
+						target="_blank">Fyll i avrop här</a>
 					<script>
 						(function () {
 							var qs, js, q, s, d = document,
@@ -283,9 +283,9 @@
 				<div class="wrap">
 					<img class="margin-top-1" src="../assets/svg/questions_icon.svg" alt="" style="width: 100%;max-width: 125px;">
 					<h3 class="common-IntroText2">
-						Har du frågor och funderingar?
+						Har ni frågor och funderingar?
 					</h3>
-					<p class="common-BodyTitle"> Då kan du boka in ett möte med en av våra säljare genom att hitta en ledig tid i kalendern nedan.</p>
+					<p class="common-BodyTitle"> Boka in ett möte med en av våra säljare genom att hitta en ledig tid i kalendern nedan.</p>
 					<ul class="grid grid-74 later equal left">
 						<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
 							<img src="../assets/img/backgrounds/contactYones.png" alt="" height="400" width="600">
