--- a/skanska/index.html
+++ b/skanska/index.html
@@ -9,18 +9,18 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Välkommen till din personliga avropssida. Slipp administrationsarbetet. Boka din besiktning med ett klick!" />
+	<meta name="description" content="Välkommen till er personliga avropssida. Slipp administrationsarbetet. Boka in en besiktning med ett klick!" />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Välkommen till din personliga avropssida" />
-	<meta property="og:description" content="Slipp administrationsarbetet. Boka din besiktning med ett klick!" />
+	<meta property="og:title" content="Välkommen till er personliga avropssida" />
+	<meta property="og:description" content="Slipp administrationsarbetet. Boka in en besiktning med ett klick!" />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
-	<meta name="twitter:title" content="Välkommen till din personliga avropssida" />
-	<meta name="twitter:description" content="Slipp administrationsarbetet. Boka din besiktning med ett klick!" />
+	<meta name="twitter:title" content="Välkommen till er personliga avropssida" />
+	<meta name="twitter:description" content="Slipp administrationsarbetet. Boka in en besiktning med ett klick!" />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
