New icons for Skanska page

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -185,7 +185,7 @@
 							Välkommen till er personliga avropssida
 						</h1>
 						<p>
-							Slipp administrationsarbete. Boka in en besiktning med ett klick!
+							Slipp administrationsarbete. Boka besiktning med ett klick!
 						</p>
 						<a class="typeform-share common-Button text-blue" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">boka besiktning </a>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
@@ -228,28 +228,24 @@
 					<h2 class="common-IntroText margin-top-1 margin-bottom-5">Hur blir det enklare?</h2>
 					<ul class="flex margin-bottom-5">
 						<li class="col-3-12">
-							<img src="../assets/svg/scope_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:80px;">
-							<h3 class="equalElement common-BodyTitle">Insikt</h3>
-							<p class="common-BodyText">Inga förfrågningsunderlag</p>
+							<img src="../assets/svg/docStacked_icon.svg" alt="Ikon som illusterar bilagor"
+								style="width:70px;">
+							<h3 class="equalElement common-BodyTitle">Inga förfrågningsunderlag</h3>
 						</li>
 						<li class="col-3-12">
-							<img src="../assets/svg/timer_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:80px;">
-							<h3 class="equalElement common-BodyTitle">Spara tid</h3>
-							<p class="common-BodyText">Inga offerter</p>
-						</li>
-						<li class="col-3-12">
-							<img src="../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:110px;">
-							<h3 class="equalElement common-BodyTitle">TITLE</h3>
-							<p class="common-BodyText">Inga uppdragsbekräftelser</p>
+							<img src="../assets/svg/billsGrouped_icon.svg" alt="Ikon som illusterar bilagor"
+								style="width:120px;">
+							<h3 class="equalElement common-BodyTitle">Inga <br> offerter</h3>
 						</li>
 						<li class="col-3-12">
 							<img src="../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:110px;">
-							<h3 class="equalElement common-BodyTitle">TITLE</h3>
-							<p class="common-BodyText">Inga beställningsskrivelser</p>
+								style="width:120px;">
+							<h3 class="equalElement common-BodyTitle">Inga uppdragsbekräftelser</h3>
+						</li>
+						<li class="col-3-12">
+							<img src="../assets/svg/orderPapers_icon.svg" alt="Ikon som illusterar bilagor"
+								style="width:100px;">
+							<h3 class="equalElement common-BodyTitle">Inga beställningsskrivelser</h3>
 						</li>
 					</ul>
 					<p class="common-BodyTitle">Det enda ni behöver göra att fylla i ett enkelt avrop!</p>
