Explanatory text updated

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -205,7 +205,9 @@
 
 					<div class="fix-10-12 center margin-bottom-10 margin-top-1">
 						<h2 class="common-IntroText2">
-							Tack vare det nationella ramavtalet om entreprenadbesiktningar och kontrollansvariguppdrag slipper ni som projektutvecklare hos Skanska huvudvärken med att samla in massa underlag för att boka in en besiktning. 
+							Tack vare det nationella ramavtalet gällande entreprenadbesiktningar och 
+							kontrollansvarig slipper ni hos Skanska
+							huvudvärken med att samla in massa underlag för att boka in en besiktning.
 						</h2>
 						<div class="announcement">
 							<span class="new-pill">PS</span>
