--- a/skanska/index.html
+++ b/skanska/index.html
@@ -250,7 +250,7 @@
 							<h3 class="equalElement common-BodyTitle">Inga beställningsskrivelser</h3>
 						</li>
 					</ul>
-					<p class="common-BodyTitle">Det enda ni behöver göra att fylla i ett enkelt avrop!</p>
+					<p class="common-BodyTitle">Det enda ni behöver göra är att fylla i ett enkelt avrop!</p>
 					<a class="typeform-share common-Button blue text-white margin-bottom-10"
 						href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left"
 						target="_blank">Fyll i avrop här</a>
