--- a/skanska/index.html
+++ b/skanska/index.html
@@ -283,7 +283,7 @@
 					<h3 class="common-IntroText2">
 						Har ni frågor och funderingar?
 					</h3>
-					<p class="common-BodyTitle"> Boka in ett möte med en av våra säljare genom att hitta en ledig tid i kalendern nedan.</p>
+					<p class="common-BodyTitle">Boka in ett möte med oss genom att välja en ledig tid nedan.</p>
 					<ul class="grid grid-74 later equal left">
 						<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
 							<img src="../assets/img/backgrounds/contactYones.png" alt="" height="400" width="600">
