--- a/skanska/index.html
+++ b/skanska/index.html
@@ -285,11 +285,19 @@
 					</h3>
 					<p class="common-BodyTitle">Boka in ett möte med oss genom att välja en ledig tid nedan.</p>
 					<ul class="grid grid-74 later equal left">
-						<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
-							<img src="../assets/img/backgrounds/contactYones.png" alt="" height="400" width="600">
+						<li class="col-10-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
+							<!-- Start of Meetings Embed Script -->
+							<div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/kenneth-helenius?embed=true"></div>
+							<script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js">
+							</script>
+							<!-- End of Meetings Embed Script -->
 						</li>
-						<li class="col-8-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
-							<img src="../assets/img/backgrounds/contactKenneth.png" alt="" height="400" width="600">
+						<li class="col-10-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
+							<!-- Start of Meetings Embed Script -->
+							<div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/yones1?embed=true"></div>
+							<script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js">
+							</script>
+							<!-- End of Meetings Embed Script -->
 						</li>
 					</ul>
 				</div>
