Section id boka

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -275,7 +275,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide whiteSlide center margin-bottom-10" id="">
+	<section class="slide whiteSlide center margin-bottom-10" id="boka">
 		<div class="content">
 			<div class="container-lg">
 				<div class="wrap">
