--- a/skanska/index.html
+++ b/skanska/index.html
@@ -184,9 +184,6 @@
 						<h1 class="common-IntroText text-white">
 							Välkommen till er personliga avropssida
 						</h1>
-						<p>
-							Slipp administrationsarbete. Boka besiktning med ett klick!
-						</p>
 						<a class="typeform-share common-Button text-blue" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">boka besiktning </a>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 					</div>
@@ -287,7 +284,8 @@
 					<ul class="grid grid-74 later equal left">
 						<li class="col-10-12 col-tablet-1-2 col-phablet-1-1 fromCenter done">
 							<!-- Start of Meetings Embed Script -->
-							<div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/kenneth-helenius?embed=true"></div>
+							<div class="meetings-iframe-container"
+								data-src="https://meetings.hubspot.com/kenneth-helenius/traffa-besiktningsmanse?embed=true"></div>
 							<script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js">
 							</script>
 							<!-- End of Meetings Embed Script -->
