Added typeform links Added new icons and adjusted sizes

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -184,7 +184,8 @@
 						<h1 class="common-IntroText text-white">
 							Välkommen till er personliga avropssida
 						</h1>
-						<a class="typeform-share common-Button text-blue" href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left" target="_blank">boka besiktning </a>
+						<a class="typeform-share common-Button text-blue" href="https://besiktningsman-se.typeform.com/to/Gmua6u"
+							data-mode="drawer_left" target="_blank">boka besiktning </a>
 						<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 					</div>
 
@@ -228,28 +229,28 @@
 					<ul class="flex margin-bottom-5">
 						<li class="col-3-12">
 							<img src="../assets/svg/docStacked_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:60px;">
+								style="width:72px;">
 							<h3 class="equalElement common-BodyTitle">Inga förfrågningsunderlag</h3>
 						</li>
 						<li class="col-3-12">
 							<img src="../assets/svg/billsGrouped_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:100px;">
+								style="width:115px;">
 							<h3 class="equalElement common-BodyTitle">Inga <br> offerter</h3>
 						</li>
 						<li class="col-3-12">
 							<img src="../assets/svg/lists_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:100px;">
+								style="width:110px;">
 							<h3 class="equalElement common-BodyTitle">Inga uppdragsbekräftelser</h3>
 						</li>
 						<li class="col-3-12">
 							<img src="../assets/svg/orderPapers_icon.svg" alt="Ikon som illusterar bilagor"
-								style="width:80px;">
+								style="width:100px;">
 							<h3 class="equalElement common-BodyTitle">Inga beställningsskrivelser</h3>
 						</li>
 					</ul>
 					<p class="common-BodyTitle">Det enda ni behöver göra är att fylla i ett enkelt avrop!</p>
 					<a class="typeform-share common-Button blue text-white margin-bottom-10"
-						href="https://besiktningsman-se.typeform.com/to/BAbQjy" data-mode="drawer_left"
+						href="https://besiktningsman-se.typeform.com/to/Gmua6u" data-mode="drawer_left"
 						target="_blank">Fyll i avrop här</a>
 					<script>
 						(function () {
