Layout for popover form

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -259,9 +259,7 @@
 	</section>
 	<!-- Popup iframe -->
 	<div class="popup fullscreen" data-popup-id="close">
-		<div class="close"><svg>
-				<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-			</svg></div>
+
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -269,6 +267,11 @@
 						<div class="container-lg">
 
 							<div class="formBackground">
+								<div class="close">
+									<svg>
+										<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
+									</svg>
+								</div>
 								<header>
 									Boka din besiktning
 								</header>
