Page for Skanska order form added + basic styling

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -197,9 +197,13 @@
 			<div class="left">
 				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
-			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="position-top"><svg>
+			<div class="right">
+				<span class="button actionButton sidebarTrigger" data-sidebar-id="position-top">
+					<svg>
 						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use>
-					</svg></span></div>
+					</svg>
+				</span>
+			</div>
 		</div>
 	</nav>
 
@@ -236,7 +240,7 @@
 		</div>
 	</nav>
 	<!-- HEADER -->
-	<section class="slide autoHeight fade" data-name="home" id="">
+	<section class="slide fade" data-name="home" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -247,57 +251,16 @@
 						<h1 class="common-IntroText text-white">
 							Välkommen till er personliga avropssida
 						</h1>
-						<button class="common-Button text-blue popupTrigger" data-popup-id="close">boka besiktning
-						</button>
+						<a href="/skanska/boka/" class="common-Button text-blue">boka besiktning
+						</a href>
 					</div>
 
 				</div>
 			</div>
 		</div>
 		<div class="background" style="background-image:url(../assets/img/backgrounds/skanskaproject.jpg)"
-			alt="Foto av ett snöigt innerstockholm"></div>
+			alt="Foto av ett snöigt innerstockholm" style="min-height: 600px;"></div>
 	</section>
-	<!-- Popup iframe -->
-	<div class="popup fullscreen" data-popup-id="close">
-
-		<div class="content">
-			<div class="container">
-				<div class="wrap">
-					<div class="popupContent">
-						<div class="container-lg">
-
-							<div class="formBackground">
-								<div class="close">
-									<svg>
-										<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-									</svg>
-								</div>
-								<header>
-									Boka din besiktning
-								</header>
-
-								<div class="" style="padding:10px 18px 20px 24px;background-color: #f7fafc;">
-									<!--[if lte IE 8]>
-									<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
-									<![endif]-->
-									<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js">
-									</script>
-									<script>
-										hbspt.forms.create({
-											portalId: "6310815",
-											formId: "5bb7cf65-ba36-4bbe-9efb-5f9baf84b060"
-										});
-									</script>
-								</div>
-								<footer></footer>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<section class="slide whiteSlide kenBurns" id="">
 		<div class="content">
 			<div class="container-lg">
@@ -315,7 +278,8 @@
 								Ramavtalet kan ni hitta i Skanskas intranät genom att söka på
 								“besiktning”/”besiktningsman”.
 								<br>
-								I ramavtalet finns information om exempelvis priser och villkor som exklusivt gäller för
+								I ramavtalet finns information om exempelvis priser och villkor som exklusivt
+								gäller för
 								Skanska.
 							</span>
 						</div>
@@ -457,7 +421,8 @@
 									</a>
 									<a class="" target="_blank"
 										href="https://medium.com/besiktningsbloggen/v%C3%A4lkommen-till-besiktningsbranschens-och-byggbranschens-nya-guld%C3%A5lder-a6b6a0ac238b">
-										<p class="text-blue">Välkommen till besiktningsbranschens (och byggbranschens)
+										<p class="text-blue">Välkommen till besiktningsbranschens (och
+											byggbranschens)
 											nya guldålder!</p>
 									</a>
 									<a class="" target="_blank"
