Removed typeform on Skanska landing page

--- a/skanska/index.html
+++ b/skanska/index.html
@@ -317,26 +317,8 @@
 						</li>
 					</ul>
 					<p class="common-BodyTitle">Det enda ni behöver göra är att fylla i ett enkelt avrop!</p>
-					<a class="typeform-share common-Button blue text-white margin-bottom-10"
-						href="https://besiktningsman-se.typeform.com/to/Gmua6u" data-mode="drawer_left"
-						target="_blank">Fyll i avrop här</a>
-					<script>
-						(function () {
-							var qs, js, q, s, d = document,
-								gi = d.getElementById,
-								ce = d.createElement,
-								gt = d.getElementsByTagName,
-								id = "typef_orm_share",
-								b = "https://embed.typeform.com/";
-							if (!gi.call(d, id)) {
-								js = ce.call(d, "script");
-								js.id = id;
-								js.src = b + "embed.js";
-								q = gt.call(d, "script")[0];
-								q.parentNode.insertBefore(js, q)
-							}
-						})()
-					</script>
+					<a class="common-Button blue text-white margin-bottom-10" href="/skanska/boka/"
+						data-mode="drawer_left" target="_blank">Fyll i avrop här</a>
 				</div>
 			</div>
 		</div>
