--- a/skanska/index.html
+++ b/skanska/index.html
@@ -317,8 +317,7 @@
 						</li>
 					</ul>
 					<p class="common-BodyTitle">Det enda ni behöver göra är att fylla i ett enkelt avrop!</p>
-					<a class="common-Button blue text-white margin-bottom-10" href="/skanska/boka/"
-						data-mode="drawer_left" target="_blank">Fyll i avrop här</a>
+					<a class="common-Button blue text-white margin-bottom-10" href="/skanska/boka/">Fyll i avrop här</a>
 				</div>
 			</div>
 		</div>
