--- a/skanska/index.html
+++ b/skanska/index.html
@@ -251,7 +251,7 @@
 						<h1 class="common-IntroText text-white">
 							Välkommen till er personliga avropssida
 						</h1>
-						<a href="../skanska/boka/" class="common-Button text-blue">boka besiktning
+						<a href="../../../skanska/boka/" class="common-Button text-blue">boka besiktning
 						</a href>
 					</div>
 
@@ -317,7 +317,7 @@
 						</li>
 					</ul>
 					<p class="common-BodyTitle">Det enda ni behöver göra är att fylla i ett enkelt avrop!</p>
-					<a class="common-Button blue text-white margin-bottom-10" href="../skanska/boka/">Fyll i avrop
+					<a class="common-Button blue text-white margin-bottom-10" href="../../../skanska/boka/">Fyll i avrop
 						här</a>
 				</div>
 			</div>
