--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- favicons -->
-    <link rel="shortcut icon" href="../../../favicon.ico">
+    <link rel="shortcut icon" href="../../../../favicon.ico">
     <!-- Making the website social media friendly-->
     <meta name="description" content="Kontakta oss med frågor eller för att boka en besiktning" />
     <meta name="robots" content="noodp" />
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Kontakta oss" />
     <meta property="og:url" content="https://www.besiktningsman.se/kontakt" />
     <meta property="og:site_name" content="Besiktningsman.se | Kontakta oss">
-    <meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
+    <meta property="og:image" content="../../../../assets/img/backgrounds/og_image.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Kontakta oss med frågor eller för att boka en besiktning" />
     <meta name="twitter:title" content="Certifierad &amp; oberoende besiktningsman för fastighet &amp; utemiljö" />
@@ -27,7 +27,7 @@
 
 
     <!-- Styles -->
-    <link href="../../../css/slides.css" rel="stylesheet" type="text/css">
+    <link href="../../../../css/slides.css" rel="stylesheet" type="text/css">
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
@@ -175,27 +175,27 @@
         <div class="sections desktop">
             <div class="left">
                 <ul class="menu crop small bold">
-                    <li><a href="../../../dokument/">Dokument</a></li>
-                    <li><a href="../../../nyheter/">Nyheter</a></li>
-                    <li><a href="../../../om_oss/">Om oss</a></li>
+                    <li><a href="../../../../dokument/">Dokument</a></li>
+                    <li><a href="../../../../nyheter/">Nyheter</a></li>
+                    <li><a href="../../../../om_oss/">Om oss</a></li>
                 </ul>
             </div>
             <div class="center">
-                <a href="../../../"> <img src="../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se"
+                <a href="../../../../"> <img src="../../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se"
                         style="width:200px;">
                 </a>
             </div>
             <div class="right">
                 <ul class="menu crop small bold">
-                    <li><a href="../../../#tjanster">Tjänster</a></li>
-                    <li><a href="../../../karriar/">Karriär</a></li>
-                    <li><a href="../../../kontakt/" class="text-blue">Kontakta oss</a></li>
+                    <li><a href="../../../../#tjanster">Tjänster</a></li>
+                    <li><a href="../../../../karriar/">Karriär</a></li>
+                    <li><a href="../../../../kontakt/" class="text-blue">Kontakta oss</a></li>
                 </ul>
             </div>
         </div>
         <div class="sections compact hidden">
             <div class="left">
-                <a href="../../../"><img src="../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se"
+                <a href="../../../../"><img src="../../../../assets/svg/bm_logo.svg" alt="Besiktningsman.se"
                         style="width:200px;"></a>
             </div>
             <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="position-top"><svg>
@@ -213,22 +213,22 @@
 
             <ul class="mainMenu center margin-top-1">
 
-                <li><a href="../../../#tjanster">Tjänster</a></li>
+                <li><a href="../../../../#tjanster">Tjänster</a></li>
                 <br>
                 <br>
-                <li><a href="../../../kontakt/">Kontakta oss</a></li>
+                <li><a href="../../../../kontakt/">Kontakta oss</a></li>
                 <br>
                 <br>
-                <li><a href="../../../karriar/">Karriär</a></li>
+                <li><a href="../../../../karriar/">Karriär</a></li>
                 <br>
                 <br>
-                <li><a href="../../../om_oss/">Om oss</a></li>
+                <li><a href="../../../../om_oss/">Om oss</a></li>
                 <br>
                 <br>
-                <li><a href="../../../nyheter/">Nyheter</a></li>
+                <li><a href="../../../../nyheter/">Nyheter</a></li>
                 <br>
                 <br>
-                <li><a href="../../../dokument/">Dokument</a></li>
+                <li><a href="../../../../dokument/">Dokument</a></li>
                 <br>
                 <br>
                 <li><a href="tel:0101654000">Telefon: 010-165 40 00</a></li>
@@ -301,8 +301,8 @@
                 <div class="wrap">
 
                     <div class="fix-12-12 center toCenter fromCenter">
-                        <img src="../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;"
-                            class="margin-bottom-1">
+                        <img src="../../../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se"
+                            style="max-width: 400px;" class="margin-bottom-1">
                         <p class="bold margin-bottom-5" style="margin-bottom: 50px;">Sveriges ledande
                             entreprenadbesiktningsföretag</p>
                         <div class="container-lg">
@@ -316,16 +316,16 @@
                                 </li>
                                 <li class="col-2-10 col-tablet-1-2 col-phone-1-1 left">
                                     <h3 class="margin-bottom-1">Ta reda på mer</h3>
-                                    <a href="../../../kontakt/">
+                                    <a href="../../../../kontakt/">
                                         <p class="text-blue">Kontakta oss</p>
                                     </a>
-                                    <a href="../../../om_oss/">
+                                    <a href="../../../../om_oss/">
                                         <p class="text-blue">Om oss</p>
                                     </a>
-                                    <a href="../../../ispect/">
+                                    <a href="../../../../ispect/">
                                         <p class="common-Link">iSpect - Digital Besiktningsprocess</p>
                                     </a>
-                                    <a href="../../../karriar/">
+                                    <a href="../../../../karriar/">
                                         <p class="text-blue">Karriär</p>
                                     </a>
                                     <a href="tel:0101654000">
@@ -436,7 +436,7 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="../../../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
+    <script src="../../../../js/slides.min.js" type="text/javascript" name="main-scripts"></script>
 </body>
 
 </html>
