Files aren't loading

--- a/skanska/boka/index.html
+++ b/skanska/boka/index.html
@@ -27,7 +27,7 @@
 
 
     <!-- Styles -->
-    <link href="../../../../css/slides.css" rel="stylesheet" type="text/css">
+    <link href="../../../css/slides.css" rel="stylesheet" type="text/css">
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
