--- a/skanska/index.html
+++ b/skanska/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Välkommen till er personliga avropssida" />
 	<meta property="og:description" content="Slipp administrationsarbetet. Boka in en besiktning med ett klick!" />
-	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/garantibesiktning" />
+	<meta property="og:url" content="https://www.besiktningsman.se/skanska/" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title" content="Välkommen till er personliga avropssida" />
